# simple_chat_interface

./: .gitignore  index.html  log.txt  opencode.json  package.json  pnpm-lock.yaml
Backend/: .database.db  Dockerfile  concepts.py  log.txt  main.py  pyproject.toml  requirements.txt
Backend/app/: main.py
Backend/app/database/: database.py
Backend/app/langchain_wraper/: file.py  langchain.py
Backend/app/models/: models.py
Backend/app/repo/: base_repo.py  chat_repo.py  session_repo.py  user_repo.py
Backend/app/routes/: chats.py  files.py  metadata.py  session.py  user.py
Backend/app/schema/: chat.py  file.py  session.py  user.py
Backend/app/utils/: config_vars.py  custom_httpx.py
Backend/globel_logger/: logging.py
Backend/langchain_wraper/: langchain.py
Backend/models/: models.py
Backend/rag_app/: database.py  main.py
Backend/rag_app/models/: __init__.py  models.py
Backend/rag_app/repo/: __init__.py  base_repo.py  document_repo.py
Backend/rag_app/routes/: __init__.py  documents.py
Backend/rag_app/schema/: __init__.py  document.py
Backend/routes/: chats.py  files.py  session.py  user.py
Backend/schema/: file.py  session.py  user.py
Backend/utils/: config_vars.py  custom_httpx.py
frontEnd/: README.md  package.json  pnpm-lock.yaml
frontEnd/src/: App.tsx
frontEnd/src/components/: FileUploader.tsx  Settings.tsx  Sidebar.tsx  UserContextProvider.tsx  userIdInput.tsx
frontEnd/src/pages/: Chat.tsx
src/: App.css  App.tsx
src/components/: Message.tsx  Settings.tsx  Sidebar.tsx  Upload.tsx  UserContextProvider.tsx  UserInput.tsx
src/interfaces/: Interfaces.ts
src/pages/: Chat.tsx  ChatTest.tsx
src/utils/: history.ts
